syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/direktiv/direktiv/pkg/flow/grpc";

import "google/protobuf/timestamp.proto";

import "pkg/flow/grpc/pagination.proto";

message Node {
	google.protobuf.Timestamp created_at = 1;
	google.protobuf.Timestamp updated_at = 2;
	string name = 3;
	string path = 4;
	string parent = 5;
	string type = 6;
	repeated string attributes = 7;
	string oid = 8;
	bool readOnly = 9;
	string expandedType = 10;
	string mimeType = 11;
}

message DirectoryRequest {
	Pagination pagination = 1;
	string namespace = 2;
	string path = 3;
}

message DirectoryChildren {
	PageInfo pageInfo = 2;
	repeated Node results = 4;
}

message DirectoryResponse {
	string namespace = 1;
	Node node = 2;
	DirectoryChildren children = 3;
}

message CreateDirectoryRequest {
	string namespace = 1;
	string path = 2;
	bool idempotent = 3;
	bool parents = 4;
}

message CreateDirectoryResponse {
	string namespace = 1;
	Node node = 2;
}

message DeleteNodeRequest {
	string namespace = 1;
	string path = 2;
	bool idempotent = 3;
	bool recursive = 4;
}

message RenameNodeRequest {
	string namespace = 1;
	string old = 2;
	string new = 3;
}

message RenameNodeResponse {
	string namespace = 1;
	Node node = 2;
}

message CreateNodeAttributesRequest {
	string namespace = 1; 
	string path = 2;
	repeated string attributes = 3;
}

message DeleteNodeAttributesRequest {
	string namespace = 1; 
	string path = 2;
	repeated string attributes = 3;
}

message File {
	google.protobuf.Timestamp created_at = 1;
	string hash = 2;
	bytes source = 3;
	string name = 4;
	string mimeType = 5;
}

message CreateFileRequest {
	string namespace = 1;
	string path = 2;
	bytes source = 3;
	string mimeType = 4;
}

message CreateFileResponse {
	string namespace = 1;
	Node node = 2;
	File file = 3;
}

message UpdateFileRequest {
	string namespace = 1;
	string path = 2;
	bytes source = 3;
	string mimeType = 4;
}

message UpdateFileResponse {
	string namespace = 1;
	Node node = 2;
	File file = 3;
}

message FileRequest {
	string namespace = 1;
	string path = 2;	
}

message FileResponse {
	string namespace = 1;
	Node node = 2;
	File file = 3;
}
